# learnjs

./: .gitignore
ES6/: Gruntfile.js  package.json
ES6/src/: lang.js
ES6/test/: SpecRunner.html
angularjs/myangular/: .gitignore  Gruntfile.js  package.json
backbone/backbone-browserify/: .gitignore  Gruntfile.js  package.json
backbone/backbone-requirejs/: .gitignore  bower.json
backbone/backbonejs/: SpecRunner.html
backbone/book-library/: .gitignore  Gruntfile.js  bower.json  index.html  package.json  server.js
backbone/todomvc/: index.html
flux-and-react/: gulpfile.js  login.js  package.json  server.js
flux-and-react/.data/: users
flux-and-react/src/: dispatcher.js  main.js
flux-and-react/views/: index.ejs
lang/es6-jasmine/: package.json
lang/es6-jasmine-mocha-chai-sinon/: Gruntfile.js  package.json
lang/es6-webpack/: package.json  webpack.config.js
lang/promises/: package.json
lang/python/Complete-Python-Developer-in-2021-Zero-to-Mastery/1st pass/repl.it/: pyproject.toml  testrunner.py
lang/python/Complete-Python-Developer-in-2021-Zero-to-Mastery/1st pass/repl.it/projects/: _1_our_first_gui.py
lang/python/Complete-Python-Developer-in-2021-Zero-to-Mastery/1st pass/repl.it/specs/: _3_basics.py  __init__.py
node.js/beginning-node.js/: .gitignore  package.json
promises/: package.json
promises/src/: promise.js
promises/test/: SpecRunner.html
src/: app.js
test/spec/: ch7Spec.js  spec.js
testing/chai/: Gruntfile.js  package.json
testing/mocha/: package.json
testing/sinon/: package.json
tools/es6-webpack/: index.html  (+2 more)
(+4363 files in other folders)
